jps/jps-plugin/testData/incremental/withJava/javaUsedInKotlin/removeAnnotation/Main.kt
fun main() {
    konst v = JavaClass()
    v.konstue = null //error
}